# Video-Streaming-App

./: README.md
Consumer Service/: .env.example  README.md  main.py  pyproject.toml  secret_keys.py
Transcoder Service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  secrets_keys.py
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  secret_keys.py
backend/db/: base.py  db.py  redis_db.py
backend/db/middleware/: auth_middleware.py
backend/db/models/: users.py  videos.py
backend/helpers/: auth_helper.py
backend/pydantic_models/: auth_model.py  upload_model.py
backend/routes/: auth.py  upload.py  video.py
video_streaming_app_frontend/: .env.example  .metadata  README.md  pubspec.yaml
video_streaming_app_frontend/android/app/: build.gradle.kts
video_streaming_app_frontend/ios/Runner/: Info.plist
video_streaming_app_frontend/ios/Runner.xcodeproj/: project.pbxproj
video_streaming_app_frontend/lib/: main.dart
video_streaming_app_frontend/lib/services/: auth_service.dart  upload_video_service.dart  video_service.dart
video_streaming_app_frontend/linux/: CMakeLists.txt
video_streaming_app_frontend/linux/runner/: my_application.cc
video_streaming_app_frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
video_streaming_app_frontend/macos/Runner.xcodeproj/: project.pbxproj
video_streaming_app_frontend/test/: widget_test.dart
video_streaming_app_frontend/web/: index.html  manifest.json
video_streaming_app_frontend/windows/: CMakeLists.txt
(+14 files in other folders)
